(lang dune 3.16)

(name bidirectional)

(generate_opam_files true)

(source
 (github nikhil-kamath/bidirectional))

(authors "Nikhil Kamath")

(maintainers "Nikhil Kamath")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bidirectional)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
